remove task without proper styling

--- a/src/todoList.css
+++ b/src/todoList.css
@@ -1,32 +1,33 @@
 #project-list {
-    margin: 0 auto;
-    padding: 5px;
-    border: 1px solid 5571FF;
-    width: 300px;
+  margin: 0 auto;
+  padding: 5px;
+  border: 1px solid 5571FF;
+  width: 300px;
 }
 
 .project{
-    padding: 5px;
-    background-color: #f6f9c6;
-    margin-bottom: 5px;
+  padding: 5px;
+  background-color: #f6f9c6;
+  margin-bottom: 5px;
 }
 
 .project-header{
-    background-color: #79bcd8;
+  background-color: #79bcd8;
 }
 
 ul.task-list{
-    padding: 5px;
+  padding: 5px;
 }
 
 .task {
-    width: auto;
-    height: 20px;
-    background-color: aqua;
-    margin-top: 3px;
-    list-style-type: none;
+  width: auto;
+  height: 20px;
+  display: inline-block;
+  background-color: aqua;
+  margin-top: 3px;
+  list-style-type: none;
 }
 
-.delete-project {
-	float: right
+.remove-item {
+  float: right
 }
