Display user full name on page after sign in

--- a/src/styles/todoList.css
+++ b/src/styles/todoList.css
@@ -62,7 +62,16 @@ input {
   cursor: pointer;
 }
 
+/* MARGINS */
+
+.m-r-30 {
+  margin-right: 30px;
+}
+
+.right {
+  float: right;
+}
+
 .btn.logout {
   position: relative;
-  float: right;
 }
